--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,6 @@ picture{
     display: block;
 }
 .header-logo-part {
-    padding-top: 16px;
-    padding-bottom: 16px;
     color: #2e2f42;
 }
 .menu-btn{
@@ -167,6 +165,7 @@ picture{
         margin-left: auto;
     }
     .header-address-list {
+        display: grid;
         gap: 12px;
     }
     .header-address-link {
@@ -189,10 +188,6 @@ picture{
 @media screen and (min-width: 1158px){
     .header-logo{
         margin-right: 76px;
-    }
-    .header-logo-part {
-        padding-top: 24px;
-        padding-bottom: 24px;
     }
     .header-address-list {
         display: flex;
@@ -319,6 +314,10 @@ picture{
 .advantages-list-ill{
     display: none;
 }
+.advantages-list{
+    display: grid;
+    gap: 72px;
+}
 .advantages-subtitle {
     font-weight: 700;
     font-size: 36px;
@@ -326,6 +325,7 @@ picture{
     letter-spacing: 0.02em;
     margin-bottom: 8px;
     color: #2e2f42;
+    text-align: center;
 }
 .advantages-item-text {
     font-weight: 500;
@@ -473,9 +473,9 @@ picture{
 }
 @media screen and (min-width: 768px){
     .team .container-narrow{
-        width: 768px;
-        padding-left: 108px;
-        padding-right: 108px;
+        width: 584px;
+        padding-left: 16px;
+        padding-right: 16px;
     }
     .team-list{
         display: flex;
@@ -630,6 +630,9 @@ picture{
     margin-bottom: 16px;
     color: #4d5ae5;
 }
+.footer-logo-text{
+    margin-bottom: 72px;
+}
 .footer-logo-part {
     color: #f4f4fd;
 }
@@ -639,7 +642,6 @@ picture{
     line-height: 1.5;
     letter-spacing: 0.02em;
     max-width: 288px;
-    margin-bottom: 72px;
     color: #f4f4fd;
 }
 .footer-icon-title {
@@ -654,6 +656,7 @@ picture{
 .footer-icon-social {
     align-items: center;
     justify-content: center;
+    margin-bottom: 72px;
 }
 .footer-icon-list {
     display: flex;
@@ -671,7 +674,6 @@ picture{
     border-radius: 50%;
     display: flex;
     background-color: #4D5AE5;
-    margin-bottom: 72px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icon-link:hover {
@@ -746,8 +748,7 @@ picture{
 }
 @media screen and (min-width: 768px){
     .footer .container-narrow{
-        width: 768px;
-        padding-left: 108px;
+        width: 584px;
         display: flex;
         flex-wrap: wrap;
     }
@@ -789,13 +790,24 @@ picture{
         padding-left: 15px;
         padding-right: 15px;
     }
+    .footer-logo-text{
+        margin-right: 120px;
+        margin-bottom: 0;
+    }
     .footer-logo{
         display: block;
         display: inline-block;
     }
+    .footer-text{
+        margin-right: 0;
+    }
+    .footer-icon-social{
+        margin-bottom: 0;
+    }
     .footer-subscribe {
-            margin-left: auto;
-        }
+        margin-left: 80px;
+        /* margin-left: auto; */
+    }
 }
 
 /*==========mobile-menu==========*/
@@ -868,16 +880,6 @@ picture{
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
-.mobile-menu-address-text:hover,
-.mobile-menu-link:hover,
-.mobile-menu-address-link:hover {
-    color: #404bbf;
-}
-.mobile-menu-address-text:focus,
-.mobile-menu-link:focus,
-.mobile-menu-address-item:focus {
-    color: #404bbf;
-}
 .mobile-menu-address-list{
     display: grid;
     gap: 24px;
@@ -908,6 +910,17 @@ picture{
     background-color: #4D5AE5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.mobile-menu-address-text:hover,
+.mobile-menu-link:hover,
+.mobile-menu-address-link:hover {
+    color: #404bbf;
+}
+
+.mobile-menu-address-text:focus,
+.mobile-menu-link:focus,
+.mobile-menu-address-item:focus {
+    color: #404bbf;
+}
 .mobile-menu-icon-link:hover {
     background-color: #404bbf;
 }
@@ -917,10 +930,14 @@ picture{
 .mobile-menu-icon {
     fill: #F4F4FD;
 }
+.part{
+    color: #404bbf;
+}
 @media screen and (min-width: 768px){
     .mobile-menu-overlay{
         display: none;
     }
+
 }
 
 /*=============modal============*/
