--- a/css/styles.css
+++ b/css/styles.css
@@ -343,6 +343,10 @@ picture{
     .advantages-item{
         width: 356px;
     }
+.advantages-subtitle{
+    text-align: left;
+}
+
 }
 @media screen and (min-width: 1158px){
     .advantages {
